# MyRep

./: README.md
#1/: Autotests.cpp  Autotests.h  CData.h  CData0.cpp  CData0.h  CData1.cpp  CData1.h  CIntN.cpp  CIntN.h  CIntN_Hori.cpp  CIntN_Hori.h  CIntN_Vert.cpp  CIntN_Vert.h  CMakeLists.txt  Header.h  README.md  main.cpp
#2/: Autotests.cpp  CIntN.cpp  CIntN.h  CIntN_Hori.cpp  CIntN_Hori.h  CIntN_Vert.cpp  CMakeLists.txt  Factory.h  Factory_Hori.h  Factory_Vert.h  Header.h  main.cpp
#3/: Autotests.cpp  Autotests.h  CIntN.cpp  CIntN.h  CIntN_Hori.cpp  CIntN_Vert.h  CMakeLists.txt  Header.h  OMP_test.cpp  OMP_test.h  main.cpp
